--- a/dashboard/src/app/app.component.html
+++ b/dashboard/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="root flex flex-column h-full flex-grow p-2">
         <div class="flex flex-row align-content-center justify-content-between toolbar p-2">
             <div class="align-items-end flex flex-row gap-2">
-                <img [src]="'../assets/'+assetsFolder+'/logo.svg'" class="clover-logo">
+                <!-- <img [src]="'../assets/core/logo.svg'" class="core-logo"> -->
                 @if (aggregated || panel) {
                     <div class="flex flex-column  justify-content-center h-full">
                         <span class="text-xs powered-by">Analytics</span>
